# sidoc

./: .gitmodules  README.md  gendoc.py  pyproject.toml  requirements.txt
procedure/: __init__.py  foundations.py
